add login register and guard

--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container mt-4">
     <div class="mt-3 mb-3 text-center">
         <h1>Payment Entry Form</h1>
