--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,17 +1,26 @@
-<div>
+
+<div class="container text-center mt-3 border">
   <form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="h3 mt-3">
+      <label for="title">LOGIN</label>
+    </div>
     <div>
       <label for="email">Username (Email)</label>
+    </div>
+    <div>
       <input type="email" formControlName="email">
       <span class="error" *ngIf="form.get('email').touched && form.get('email').hasError('required')">Email is required</span>
     </div>
     <div>
       <label for="password">Password</label>
+    </div>
+    <div>  
       <input type="password" formControlName="password">
       <span class="error" *ngIf="form.get('password').touched && form.get('password').hasError('required')">Password is required</span>
     </div>
-
-    <button>Login</button>
+    <div class="mt-2">  
+      <button class="btn btn-primary">Login</button>
+    </div>    
   </form>
   <br>
   <a [routerLink]="['/signup']" routerLinkActive="router-link-active">Not registered?</a>
